task 3 added more files and bug fixed(?)

--- a/PhotosApp/Views/Photos/Index.cshtml
+++ b/PhotosApp/Views/Photos/Index.cshtml
@@ -1,7 +1,9 @@
-﻿@model PhotoIndexModel
+﻿@using Microsoft.AspNetCore.Authorization
+@model PhotoIndexModel
 @{
     ViewData["Title"] = "Все фото";
 }
+@inject IAuthorizationService AuthorizationService
 
 <div class="container">
     @if (Model.Photos.Any())
@@ -28,7 +30,10 @@
             @if (User.Identity.IsAuthenticated)
             {
                 <text>Ничего не найдено...</text>
-                <text>&nbsp;<a asp-controller="Photos" asp-action="AddPhoto">Загрузите</a>&nbsp; свои фото</text>
+                if ((await AuthorizationService.AuthorizeAsync(User, "CanAddPhoto")).Succeeded)
+                {
+                    <text>&nbsp;<a asp-controller="Photos" asp-action="AddPhoto">Загрузите</a>&nbsp; свои фото</text>
+                }
             }
             else
             {
